@@ -1,28 +1,36 @@
 package ru.praktikum.kanban.repository.impl;
 
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
-import ru.praktikum.kanban.service.impl.HistoryLinkedList;
+import java.util.Optional;
+import java.util.TreeSet;
+import java.util.stream.Stream;
+import lombok.experimental.ExtensionMethod;
 import ru.praktikum.kanban.model.Epic;
 import ru.praktikum.kanban.model.Subtask;
 import ru.praktikum.kanban.model.Task;
 import ru.praktikum.kanban.repository.HistoryRepository;
 import ru.praktikum.kanban.repository.TaskManagerRepository;
+import ru.praktikum.kanban.service.impl.HistoryLinkedList;
+import ru.praktikum.kanban.util.StreamExtensions;
 
+@ExtensionMethod(StreamExtensions.class)
 public class InMemoryTaskRepository implements TaskManagerRepository, HistoryRepository {
     protected final HashMap<Integer, Task> tasks;
     protected final HashMap<Integer, Epic> epics;
     protected final HashMap<Integer, Subtask> subtasks;
     protected final HistoryLinkedList history;
+    protected final TreeSet<Task> prioritizedTasks;
 
     public InMemoryTaskRepository() {
         this.tasks = new HashMap<>();
         this.epics = new HashMap<>();
         this.subtasks = new HashMap<>();
         this.history = new HistoryLinkedList();
+        this.prioritizedTasks = new TreeSet<>(Comparator.comparing(Task::getStartTime));
     }
 
     // Task's methods
@@ -32,12 +40,15 @@ public class InMemoryTaskRepository implements TaskManagerRepository, HistoryRep
         return new ArrayList<>(tasks.values())
                 .stream()
                 .sorted(Comparator.comparing(Task::getId))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public void saveTask(Task task) {
         tasks.put(task.getId(), task);
+        if (!task.isTimeEmpty()) {
+            prioritizedTasks.add(task);
+        }
     }
 
     @Override
@@ -47,11 +58,17 @@ public class InMemoryTaskRepository implements TaskManagerRepository, HistoryRep
 
     @Override
     public void removeTask(Integer taskId) {
-        tasks.remove(taskId);
+        Task task = tasks.remove(taskId);
+        if (validateStartTime(task)) {
+            prioritizedTasks.remove(task);
+        }
     }
 
     @Override
     public void removeAllTasks() {
+        tasks.values().stream()
+                .filter(this::validateStartTime)
+                .forEach(prioritizedTasks::remove);
         tasks.clear();
     }
 
@@ -62,7 +79,7 @@ public class InMemoryTaskRepository implements TaskManagerRepository, HistoryRep
         return new ArrayList<>(epics.values())
                 .stream()
                 .sorted(Comparator.comparing(Epic::getId))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -73,11 +90,6 @@ public class InMemoryTaskRepository implements TaskManagerRepository, HistoryRep
     @Override
     public void saveEpic(Epic epic) {
         epics.put(epic.getId(), epic);
-    }
-
-    @Override
-    public void saveSubtask(Subtask subtask) {
-        subtasks.put(subtask.getId(), subtask);
     }
 
     @Override
@@ -97,7 +109,7 @@ public class InMemoryTaskRepository implements TaskManagerRepository, HistoryRep
         return new ArrayList<>(subtasks.values())
                 .stream()
                 .sorted(Comparator.comparing(Subtask::getId))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -106,12 +118,26 @@ public class InMemoryTaskRepository implements TaskManagerRepository, HistoryRep
     }
 
     @Override
+    public void saveSubtask(Subtask subtask) {
+        subtasks.put(subtask.getId(), subtask);
+        if (!subtask.isTimeEmpty()) {
+            prioritizedTasks.add(subtask);
+        }
+    }
+
+    @Override
     public void removeSubtask(Integer subtaskId) {
-        subtasks.remove(subtaskId);
+        Subtask subtask = subtasks.remove(subtaskId);
+        if (validateStartTime(subtask)) {
+            prioritizedTasks.remove(subtask);
+        }
     }
 
     @Override
     public void removeAllSubtasks() {
+        subtasks.values().stream()
+                .filter(this::validateStartTime)
+                .forEach(prioritizedTasks::remove);
         subtasks.clear();
     }
 
@@ -133,5 +159,22 @@ public class InMemoryTaskRepository implements TaskManagerRepository, HistoryRep
             return;
         }
         history.add(task);
+    }
+
+    @Override
+    public Optional<Integer> getLastId() {
+        return Stream.of(epics.values(), subtasks.values(), tasks.values())
+                .flatMap(Collection::stream)
+                .map(Task::getId)
+                .max(Integer::compareTo);
+    }
+
+    @Override
+    public List<Task> getPrioritizedTasks() {
+        return new ArrayList<>(prioritizedTasks);
+    }
+
+    private boolean validateStartTime(Task task) {
+        return task != null && !task.isTimeEmpty();
     }
 }
